# shotten

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  shotten.sln
shotten/: .fuse_hidden000002db00000001  Board.cpp  Board.h  CMakeCache.txt  Card.cpp  Card.h  Deck.cpp  Deck.h  Game.cpp  Game.h  Landmark.cpp  Landmark.h  Makefile  Option.h  Player.cpp  Player.h  cmake_install.cmake  main.cpp  shotten  shotten.vcxproj  shotten.vcxproj.filters
